# openbrain

./: .env  .env.example  .gitignore  OPENCLAW_RETROFIT.md  README.md  pyproject.toml  requirements-lock.txt
archive/2026/03/07/: peter-installed-openclaw-on-ubuntu-today-b848ea3b-d472-4835-b6d2-d86ebc30f2c7.md  peter-requires-easy-openclaw-retrofit-after-upgrades-3aef231f-c2f9-452c-bccd-d47493d2c3ff.md  peter-wants-openclaw-upgrades-to-preserve-the-external-memory-system-6010a3ac-9517-486b-99cc-a9fe12cb1fff.md
openbrain/: api.py  archive.py  cli.py  config.py  connectors.py  db.py  embeddings.py  enrich.py  models.py  service.py
openbrain_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openclaw/: SKILL.md
scripts/: backup.sh  update-brian-repo.sh
sql/: 001_init.sql
systemd/: openbrain-gateway.env  openbrain-gateway.service
